tests/neg/mutual/A_1.scala
class A(b: B) // error